--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "0d042523",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "[158 rows x 27 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "377d5f74-38b5-4710-94a6-47e297d8bcae",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
        "4    1995000        29.0  68793.103448"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "2dd8b285-f221-486f-8d26-afc188543338",
    "metadata": {},
    "outputs": [
@@ -587,7 +587,7 @@
        "24    2500000        35.0  71428.571429"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "034a97c8-ef14-49c5-9f91-ae6224958fbc",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "bf3fd6c5-73ff-4f80-afd6-efc0da967bdf",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "64.97324840764333"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
    "id": "2db42a80-9d2c-46d2-a613-fff0df0185d2",
    "metadata": {},
    "source": [
-    "One interesting aspect is that the average living area for apartments in Ekahagen is approximately 64.5 square meters, while the five most expensive apartments per square meter have significantly smaller living areas"
+    "One interesting aspect is that the average living area for apartments in Ekahagen is approximately 64.5 square meters, while the five most expensive apartments per square meter have significantly smaller living areas. "
    ]
   }
  ],
