--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -1082,10 +1082,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "id": "c052d224-9e90-4fed-8ba8-0badf5c29667",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The three municipialities with highest participation is presented in the table below\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1227,13 +1234,14 @@
        "[3 rows x 45 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "top_3_participation = data2.sort_values(\"VALDELTAGANDE\", ascending=False)\n",
+    "print(\"The three municipialities with highest participation is presented in the table below\")\n",
     "data_swedish_election_sort2.head(3)"
    ]
   },
