--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -3720,8 +3720,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 263,
    "id": "068a5020-5131-4a2e-8676-d29d57010dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/alvinalindqvist/Documents/GitHub/su-mt4007'"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ba8979c-1f29-46d4-9fc2-424cf577814d",
    "metadata": {},
    "outputs": [],
    "source": []
