--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "3a608a03-89a7-464b-81f8-ccfddebef89b",
    "metadata": {},
    "outputs": [],
@@ -101,9 +101,9 @@
     "\n",
     "# Extrahera motiveringar från JSON-data\n",
     "motivations = \" \".join(\n",
-    "    str(prize[\"laureates\"][0][\"motivation\"][\"en\"])\n",
+    "    prize[\"laureates\"][0][\"motivation\"][\"en\"]\n",
     "    for prize in nobel_data[\"nobelPrizes\"]\n",
-    "    if \"laureates\" in prize and prize[\"laureates\"][0].get(\"motivation\")\n",
+    "    if \"laureates\" in prize and \"motivation\" in prize[\"laureates\"][0]\n",
     ")"
    ]
   },
