--- a/Project map/Project_code.ipynb
+++ b/Project map/Project_code.ipynb
@@ -659,7 +659,7 @@
    "id": "70b92ee5-0f0f-4275-bdf2-41ed5798bcab",
    "metadata": {},
    "source": [
-    "For the data regarding fatalities based on modes of travel and accident types, I handled NaN values by replacing them with 0's. Upon examining the data in the Excel file, I observed that the NaN values represented empty entries. I assume these values indicate 0 (no fatalities), as there are no actual 0 values anywhere else in the dataset. However, if there had been 0's in other parts of the dataset, I would have investigated further to determine whether these NaN values might instead signify missing data for those specific years and categories."
+    "For the data regarding fatalities based on modes of travel and accident types, I handled NaN values by replacing them with 0's. Upon examining the data in the Excel file, I observed that the NaN values represented empty entries. I assume these values indicate 0 (no fatalities), as there are no actual 0 values anywhere else in the dataset. If there had been 0's in other parts of the dataset, I would have investigated further to determine whether these NaN values might instead signify missing data for those specific years and categories."
    ]
   },
   {
@@ -768,10 +768,10 @@
     "Fatalities decreased significantly in 2020, likely due to the pandemic and reduced traffic activity. This shows how societal changes can quickly impact road safety. However, numbers have increased steadily since then, with 2022 and 2023 showing concerning trends.\n",
     "\n",
     "#### Monthly Traffic Fatalities Over the Years\n",
-    "Summer months like June and July clearly see higher fatalities, likely due to increased travel during vacation periods. At the same time, March stands out as one of the safer months – it would be interesting to investigate if this is due to reduced travel or favorable weather conditions.\n",
+    "An overall view, we can see that the fatalities varies a lot from month to month. Summer months like June and July clearly see higher fatalities, likely due to increased travel during vacation periods. At the same time, March stands out as one of the safer months – it would be interesting to investigate if this is due to reduced travel or favorable weather conditions.\n",
     "\n",
     "#### Total Traffic Fatalities by Mode of Travel\n",
-    "It is striking that cars account for the majority of fatalities, which is unsurprising given their dominance on the roads. It is alarming that motorcycle fatalities remain high, especially considering they are mostly used during the summer months. Also fatalities involving bicycles appear to be on the rise. Light trucks accidents seems to fall, so that is possitive. \n",
+    "It is striking that cars account for the majority of fatalities, which is unsurprising given their dominance on the roads. It is alarming that motorcycle fatalities remain high, especially considering they are mostly used during the summer months. Also fatalities involving bicycles appear to be on the rise. Light trucks accidents seems to fall, so that is a good thing. \n",
     "\n",
     "#### Total Traffic Fatalities by Accident Type\n",
     "Single accidents and head-on collisions are the most common causes of fatalities. However, head-on collisions has a negative trend in 2023 but single accidents seems to increse. Cycle-moped and Other is also an accident type that seems to have an increasing trend over the years, but luckily has a negative trend in 2023.  "
@@ -1940,21 +1940,6 @@
     "When examining transportation modes, car users accounted for the majority of fatalities and injuries, reflecting their activness on the roads. Cyclists and pedestrians also represented a significant share, and the increasing injuries among cyclists are concerning. Meanwhile, accident types revealed that single accidents and head-on collisions are the deadliest, with high fatality rates but lower injury numbers. In contrast, cycle-moped accidents result in many injuries but fewer fatalities, suggesting differences in severity and survivability.\n",
     "\n",
     "To reverse the recent negative trend and make further progress, targeted actions such as improving road safety for vulnerable groups, addressing the causes of single accidents, and strengthening enforcement of traffic regulations are crucial. Achieving Vision Zero will require consistent and innovative efforts to make traffic safer for all road users."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de2e110c-3d4a-49af-a9d6-feea312881b4",
-   "metadata": {},
-   "source": [
-    "Recommendations could be\n",
-    "- Improve infrastructure with safer crossings and separate bike lanes.\n",
-    "- Educate motorists and vulnerable road users on safety.\n",
-    "- Use technology like automatic braking systems.\n",
-    "- Focus on seasonal safety measures for summer and winter.\n",
-    "- Enforce stricter regulations, like speed limits and seat belt use.\n",
-    "\n",
-    "Targeted actions aligned with Vision Zero can make traffic safer for all."
    ]
   },
   {
