--- a/Project map/Project_code.ipynb
+++ b/Project map/Project_code.ipynb
@@ -228,17 +228,323 @@
        "      <td>40</td>\n",
        "      <td>471.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>24</td>\n",
+       "      <td>26</td>\n",
+       "      <td>32</td>\n",
+       "      <td>35</td>\n",
+       "      <td>45</td>\n",
+       "      <td>50</td>\n",
+       "      <td>44</td>\n",
+       "      <td>34</td>\n",
+       "      <td>32</td>\n",
+       "      <td>26</td>\n",
+       "      <td>17</td>\n",
+       "      <td>397.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "      <td>33</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>42</td>\n",
+       "      <td>41</td>\n",
+       "      <td>34</td>\n",
+       "      <td>29</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>358.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
+       "      <td>30</td>\n",
+       "      <td>37</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16</td>\n",
+       "      <td>266.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2011.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>29</td>\n",
+       "      <td>42</td>\n",
+       "      <td>41</td>\n",
+       "      <td>27</td>\n",
+       "      <td>30</td>\n",
+       "      <td>25</td>\n",
+       "      <td>17</td>\n",
+       "      <td>28</td>\n",
+       "      <td>319.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>23</td>\n",
+       "      <td>19</td>\n",
+       "      <td>25</td>\n",
+       "      <td>33</td>\n",
+       "      <td>31</td>\n",
+       "      <td>29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>285.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>16</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>25</td>\n",
+       "      <td>27</td>\n",
+       "      <td>33</td>\n",
+       "      <td>28</td>\n",
+       "      <td>18</td>\n",
+       "      <td>19</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22</td>\n",
+       "      <td>260.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>21</td>\n",
+       "      <td>19</td>\n",
+       "      <td>22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>27</td>\n",
+       "      <td>25</td>\n",
+       "      <td>32</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>30</td>\n",
+       "      <td>270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>31</td>\n",
+       "      <td>29</td>\n",
+       "      <td>24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>29</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>259.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>21</td>\n",
+       "      <td>23</td>\n",
+       "      <td>28</td>\n",
+       "      <td>36</td>\n",
+       "      <td>25</td>\n",
+       "      <td>27</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>19</td>\n",
+       "      <td>270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>24</td>\n",
+       "      <td>27</td>\n",
+       "      <td>31</td>\n",
+       "      <td>34</td>\n",
+       "      <td>27</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>19</td>\n",
+       "      <td>252.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>31</td>\n",
+       "      <td>32</td>\n",
+       "      <td>44</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>36</td>\n",
+       "      <td>38</td>\n",
+       "      <td>324.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>23</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>221.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>17</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>12</td>\n",
+       "      <td>23</td>\n",
+       "      <td>16</td>\n",
+       "      <td>204.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2021.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>20</td>\n",
+       "      <td>26</td>\n",
+       "      <td>29</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>21</td>\n",
+       "      <td>210.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>25</td>\n",
+       "      <td>28</td>\n",
+       "      <td>24</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>28</td>\n",
+       "      <td>17</td>\n",
+       "      <td>227.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2023.0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "      <td>27</td>\n",
+       "      <td>29</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>229.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>22</td>\n",
+       "      <td>25</td>\n",
+       "      <td>24</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>20</td>\n",
+       "      <td>210.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       År Jan Feb Mar Apr Maj Jun Jul Aug Sep Okt Nov Dec  Summa total\n",
-       "0  2003.0  31  29  36  39  43  55  55  53  40  39  42  62        524.0\n",
-       "1  2004.0  25  29  26  36  37  64  45  57  39  47  29  46        480.0\n",
-       "2  2005.0  30  32  38  30  28  43  49  34  41  41  28  46        440.0\n",
-       "3  2006.0  21  28  26  38  33  50  50  49  39  28  35  48        445.0\n",
-       "4  2007.0  33  28  27  30  39  50  57  51  50  32  34  40        471.0"
+       "        År Jan Feb Mar Apr Maj Jun Jul Aug Sep Okt Nov Dec  Summa total\n",
+       "0   2003.0  31  29  36  39  43  55  55  53  40  39  42  62        524.0\n",
+       "1   2004.0  25  29  26  36  37  64  45  57  39  47  29  46        480.0\n",
+       "2   2005.0  30  32  38  30  28  43  49  34  41  41  28  46        440.0\n",
+       "3   2006.0  21  28  26  38  33  50  50  49  39  28  35  48        445.0\n",
+       "4   2007.0  33  28  27  30  39  50  57  51  50  32  34  40        471.0\n",
+       "5   2008.0  32  24  26  32  35  45  50  44  34  32  26  17        397.0\n",
+       "6   2009.0  26  15  13  33  32  31  42  41  34  29  25  37        358.0\n",
+       "7   2010.0  23   8  13  15  26  30  37  26  28  22  22  16        266.0\n",
+       "8   2011.0  20  25  18  17  29  42  41  27  30  25  17  28        319.0\n",
+       "9   2012.0  17  17  16  23  19  25  33  31  29  23  26  26        285.0\n",
+       "10  2013.0  17  16  13  14  25  27  33  28  18  19  28  22        260.0\n",
+       "11  2014.0  18  17  21  19  22  28  27  25  32  15  16  30        270.0\n",
+       "12  2015.0  13  17  14  13  17  31  29  24  30  29  18  24        259.0\n",
+       "13  2016.0  16  24   9  21  23  28  36  25  27  22  20  19        270.0\n",
+       "14  2017.0  12  14  18  17  24  27  31  34  27  19  10  19        252.0\n",
+       "15  2018.0  13  16  22  17  31  32  44  29  21  25  36  38        324.0\n",
+       "16  2019.0  27  17  10  16  19  19  20  25  15  23  13  17        221.0\n",
+       "17  2020.0  20  14   9  17  18  17  19  18  21  12  23  16        204.0\n",
+       "18  2021.0   9  12   8  19  12  17  20  26  29  21  16  21        210.0\n",
+       "19  2022.0  11  10  12  15  22  25  28  24  17  18  28  17        227.0\n",
+       "20  2023.0  15  13  13  15  27  29  14  23  26  25  15  14        229.0\n",
+       "21  2024.0   9  13   5  12  30  22  25  24  22  17  11  20        210.0"
       ]
      },
      "execution_count": 3,
@@ -259,7 +565,7 @@
     "fatalities_data = fatalities_data.dropna(axis=0, how='any')\n",
     "\n",
     "print('Number of fatalities')\n",
-    "fatalities_data.head()"
+    "fatalities_data.head(22)"
    ]
   },
   {
@@ -1670,7 +1976,7 @@
    "metadata": {},
    "source": [
     "#### Total of (Very) Severely Injured per Year (2019–2023)\n",
-    "The first plot highlights a concerning trend. There is though a noticeable dip in 2020, likely due the pandemic, but the numbers have risen significantly in the following years. Especially 2022 was a dark year. Despite a slight improvement in 2023, the overall trend is moving in the wrong direction.\n",
+    "The first plot shows some encouraging signs. While there was a temporary dip in 2020, likely due to the pandemic, the numbers did increase in the following years. However, 2023 brought a slight improvement to the right direction. \n",
     "\n",
     "#### Monthly Total of (Very) Severely Injured Over the Years\n",
     "The second plot shows a seasonal pattern in the injuries, with peaks during the summer months. Increased outdoor activities and travel during these months may contribute to higher injury rates. January also shows higher numbers, which may be attributed to the weather conditions or post-holiday traffic. \n",
